@startuml
!include style.puml
show members
hide empty members
skinparam classAttributeFontColor #FFFFFF
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Shared <<Rectangle>> {
    class Name
}
package Enrolment <<Rectangle>> {
    class Hours
    class Remark
}

Class HiddenOutside #FFFFFF
package Member <<Rectangle>> {
    class Member {

    }

    class Phone

    class Email
    class Address
    class Tag
    class Gender

    HiddenOutside ..> UniqueMemberList
    UniqueMemberList -down-> "*" Member
    Member *-down->"1" Name
    Member *-down->"1" Gender
    Member *--down->"0..1" Phone
    Member *--down->"0..1" Email
    Member *--down->"0..1" Address
    Member *-down->"*" Tag

    Member *---down->"0..1" Hours
    Member *---down->"0..1" Remark

}


@enduml
